# university-intro-to-programming

./: .gitignore  CMakeLists.txt  README.md
firstPacket/: doTriangle.c  num1.2.1.c  num1.2.21.c  num1.2.22.c  num1.2.23.c  num1.2.24.c  num1.2.25.c  num1.2.26.c  num1.2.27.c  num1.2.4.c  num1.2.43.c  num1.2.5.c  num1.2.57.c  num1.2.8.c
fourthPacket/headerFiles/: stack.h
queuePacket/: main.c
queuePacket/headerFiles/: queue.h
queuePacket/operations/: queueFunc.c
secondPacket/: main.c
secondPacket/headerFiles/: array_io.h  bubbleSort.h  num1.3.10.h  num1.3.15.h  num1.3.19.h  num1.3.27.h  quickSort.h
secondPacket/operations/: array_io.c  bubbleSort.c  num1.3.10.c  num1.3.15.c  num1.3.19.c  num1.3.27.c  quickSort.c
stackPacket/: main.c
stackPacket/operations/: stackFunc.c
thirdPacket/: main.c
thirdPacket/headerFiles/: arrayIO.h  copyArray.h  deleteArray.h  maxAndMin.h  reverse.h  sum_aveArray.h  swapAny.h
thirdPacket/operations/: arrayIO.c  copyArray.c  deleteArray.c  maxAndMin.c  reverse.c  sum_aveArray.c  swapAny.c
